--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "http://securelayer.co/"
 languageCode = "en-us"
 title = "SecureLayer"
 theme = "agnes-hugo-theme"
