--- a/config.toml
+++ b/config.toml
@@ -84,7 +84,7 @@ theme = "agnes-hugo-theme"
 	[[params.pricing.Features]]
 		Description = "2 Devices covered by our basic Managed Security Services (+50$ by added device)"
 	[[params.pricing.Features]]
-		Description = ""
+		Description = "Basic Website and Network Security Management"
 
 [[params.pricing]]
 	PricingTitle = "Entreprise"
