Revert "Update config.toml"
This reverts commit db0056db52abb5e5cd8f8481958023bf77df53f7.

--- a/config.toml
+++ b/config.toml
@@ -33,7 +33,7 @@ contentDir = "content/en"
 		
 [params.content]
 	LeadTitle = "SecureLayer"
-	LeadDescription = "A cybersecurity company helping SMBs improve their business in Europe, South America and the Caribbean."
+	LeadDescription = "a cybersecurity company helping SMBs improve their business in Europe, South America and the Caribbean."
 	ButtonCaption = "Contact Us"
 	ButtonURL = "/contact"
 
