--- a/config.toml
+++ b/config.toml
@@ -33,9 +33,9 @@ contentDir = "content/en"
 		
 [params.content]
 	LeadTitle = "SecureLayer"
-	LeadDescription = "a cybersecurity company helping SMBs improve their business in Europe, South America and the Caribbean."
-	ButtonCaption = "Contact Us"
-	URL = "/contact"
+	LeadDescription = "A cybersecurity company helping SMBs improve their business in Europe, South America and the Caribbean."
+	#ButtonCaption = "Contact Us"
+	#URL = "/contact"
 
 ################### Feature Columns (do not exceed 4) ####################
 
