--- a/config.toml
+++ b/config.toml
@@ -34,8 +34,8 @@ contentDir = "content/en"
 [params.content]
 	LeadTitle = "SecureLayer"
 	LeadDescription = "A cybersecurity company helping SMBs improve their business in Europe, South America and the Caribbean."
-	#ButtonCaption = "Contact Us"
-	#URL = "/contact"
+	ButtonCaption = "Contact Us"
+	URL = "/contact"
 
 ################### Feature Columns (do not exceed 4) ####################
 
