--- a/config.toml
+++ b/config.toml
@@ -35,7 +35,8 @@ contentDir = "content/en"
 	LeadTitle = "SecureLayer"
 	LeadDescription = "A cybersecurity company helping SMBs improve their business in Europe, South America and the Caribbean."
 	ButtonCaption = "Contact Us"
-	URL = "/contact"
+	#URL = "/contact"
+	pageRef = '/contact'
 
 ################### Feature Columns (do not exceed 4) ####################
 
