--- a/config.toml
+++ b/config.toml
@@ -36,7 +36,7 @@ contentDir = "content/en"
 	LeadDescription = "A cybersecurity company helping SMBs improve their business in Europe, South America and the Caribbean."
 	ButtonCaption = "Contact us"
 	#URL = "mailto:contact@securelayer.co"
-	pageRef = "/contact"
+	pageRef = '/contact'
 
 ################### Feature Columns (do not exceed 4) ####################
 
@@ -66,7 +66,7 @@ contentDir = "content/en"
 	PricingTitle = "Pro"
 	PricingRate = "250"	
 	ButtonCaption = "Contact us"
- 	URL = "mailto:contact@securelayer.co"
+ 	pageRef = '/contact'
 	[[params.pricing.Features]]
 		Description = "1 Risk Assessment of your system"
 	[[params.pricing.Features]]
@@ -78,7 +78,7 @@ contentDir = "content/en"
 	PricingTitle = "Business+"
 	PricingRate = "750"
 	ButtonCaption = "Contact us"
- 	URL = "mailto:contact@securelayer.co"
+ 	pageRef = '/contact'
 	[[params.pricing.Features]]
 		Description = "1 Risk Assessment of your system"
 	[[params.pricing.Features]]
@@ -92,7 +92,7 @@ contentDir = "content/en"
 	PricingTitle = "Entreprise"
 	PricingRate = ""
 	ButtonCaption = "Get Earliest Access"
- 	URL = "mailto:contact@securelayer.co"
+ 	pageRef = '/contact'
 	[[params.pricing.Features]]
 		Description = "Regular Risk Assessment of your system"
 	[[params.pricing.Features]]
