--- a/config.toml
+++ b/config.toml
@@ -35,8 +35,8 @@ contentDir = "content/en"
 	LeadTitle = "SecureLayer"
 	LeadDescription = "A cybersecurity company helping SMBs improve their business in Europe, South America and the Caribbean."
 	ButtonCaption = "Contact us"
-	#URL = "mailto:contact@securelayer.co"
-	pageRef = '/contact'
+	ButtonURL = "mailto:contact@securelayer.co"
+	#pageRef = '/contact'
 
 ################### Feature Columns (do not exceed 4) ####################
 
