--- a/config.toml
+++ b/config.toml
@@ -66,7 +66,7 @@ contentDir = "content/en"
 	PricingTitle = "Pro"
 	PricingRate = "250"	
 	ButtonCaption = "Contact us"
-	pageRef = "/contact/"
+	pageRef = "contact"
 	[[params.pricing.Features]]
 		Description = "1 Risk Assessment of your system"
 	[[params.pricing.Features]]
