--- a/config.toml
+++ b/config.toml
@@ -65,7 +65,7 @@ contentDir = "content/en"
 	PricingTitle = "Pro"
 	PricingRate = "250"	
 	ButtonCaption = "Contact us"
-	URL = "/contact"
+	pageRef = '/contact'
 	[[params.pricing.Features]]
 		Description = "1 Risk Assessment of your system"
 	[[params.pricing.Features]]
@@ -77,7 +77,7 @@ contentDir = "content/en"
 	PricingTitle = "Business+"
 	PricingRate = "750"
 	ButtonCaption = "Contact us"
-	#ButtonURL = "/contact/"
+	pageRef = '/contact'
 	[[params.pricing.Features]]
 		Description = "1 Risk Assessment of your system"
 	[[params.pricing.Features]]
@@ -91,7 +91,7 @@ contentDir = "content/en"
 	PricingTitle = "Entreprise"
 	PricingRate = ""
 	ButtonCaption = "Get Earliest Access"
-	#ButtonURL = "mailto:contact@securelayer.co"
+	pageRef = '/contact'
 	[[params.pricing.Features]]
 		Description = "Regular Risk Assessment of your system"
 	[[params.pricing.Features]]
